# aurex

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HASIL_AUDIT_AUREX.md  README.md  ROADMAP_PERBAIKAN_AUREX.md  docker-compose.staging.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-staging.yml  main.yml
ai-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
ai-service/app/: analysis.py  main.py  schemas.py
ai-service/tests/: test_analyze.py
ai_service/python_ai/: .dockerignore  Dockerfile  main.py  requirements.txt
app/Models/: ActivityLog.php  Analysis.php  Recommendation.php  StyleReport.php  UploadedImage.php  User.php
app/Services/: AurexAiClient.php  StyleReportComposer.php
backend/laravel_api/: .dockerignore  .env.example  .env.production.example  .env.staging  .env.staging.example  Dockerfile  composer.json
config/: services.php
database/factories/: ActivityLogFactory.php  AnalysisFactory.php  RecommendationFactory.php  StyleReportFactory.php  UploadedImageFactory.php  UserFactory.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2026_04_29_000001_create_uploaded_images_table.php  2026_04_29_000002_create_analyses_table.php  2026_04_29_000003_create_style_reports_table.php  2026_04_29_000004_create_recommendations_table.php  2026_04_29_000005_create_activity_logs_table.php
database/seeders/: DatabaseSeeder.php
docs/: AI_SCALABILITY_CELERY.md  API_DOCS.md  SETUP_GUIDE.md  TESTING_GUIDE.md
resources/css/: app.css
routes/: api.php  web.php
(+165 files in other folders)
