[project]
name = "aurex-ai"
version = "0.1.0"
description = "AUREX AI microservice - mock face analysis endpoint for the Laravel backend."
authors = [{ name = "AUREX" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "pillow>=10.0.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
